--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,174 @@
 <div class="logo">
-  <h2>Powered by</h2>
   <div class="logo-google-books">
     <img src="../assets/Google_Books_logo_2015.svg"/>
   </div>
+  <h2>Powered by</h2>
 </div>
-<div class="wrapper">
-  <div class="search-panel">
-    <div class="header">
-      <h1>Find your book</h1>
-    </div>
-    <div class="basic-search-form">
-      <form>
-        <label for="main-search">Basic search</label>
-        <div class="input-field">
-          <input type="search"
-                 id="main-search"
-                 placeholder="Search by title"
-                 autocomplete="off"
-                 [formControl]="searchField"
-                 autofocus
-                 required>
-          <button>Search</button>
-        </div>
-      </form>
-    </div>
-    <span class="error-message"*ngIf="isError">Sorry, it looks like there was an error. Page will reload automatically in a second.</span>
+<div class="mat-app-background container">
+  <div class="header">
+    <h1>Find your book</h1>
   </div>
-  <div class="book-list"
-      *ngIf="isLoaded === true">
-      <app-book
-            *ngFor="let book of books"
-            [book]="book">
-      </app-book>
-  </div>
+  <form [formGroup]="bookForm" 
+        (ngSubmit)="onSubmit()">
+    <div class="basic-search">
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Title</mat-label>
+            <input placeholder="Title..." 
+                   matInput 
+                   formControlName="title" 
+                   autocomplete="off" 
+                   #title/>
+              <mat-error>
+                The title must be at least 3 characters.
+              </mat-error>
+          </mat-form-field>
+      </p>
+    </div>
+    <div *ngIf="showAdvancedSearch"
+          class="advanced-search-form">
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Author</mat-label>
+          <input placeholder="Author..." 
+                matInput 
+                formControlName="author" 
+                autocomplete="off"
+                #author/>
+            <mat-error>
+              The author must be at least 2 characters.
+            </mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Choose a Language...</mat-label>
+          <select matNativeControl formControlName="language" #language>
+            <option value="null"></option>
+            <option value="AF">Afrikaans</option>
+            <option value="SQ">Albanian</option>
+            <option value="AR">Arabic</option>
+            <option value="HY">Armenian</option>
+            <option value="EU">Basque</option>
+            <option value="BN">Bengali</option>
+            <option value="BG">Bulgarian</option>
+            <option value="CA">Catalan</option>
+            <option value="KM">Cambodian</option>
+            <option value="ZH">Chinese (Mandarin)</option>
+            <option value="HR">Croatian</option>
+            <option value="CS">Czech</option>
+            <option value="DA">Danish</option>
+            <option value="NL">Dutch</option>
+            <option value="EN">English</option>
+            <option value="ET">Estonian</option>
+            <option value="FJ">Fiji</option>
+            <option value="FI">Finnish</option>
+            <option value="FR">French</option>
+            <option value="KA">Georgian</option>
+            <option value="DE">German</option>
+            <option value="EL">Greek</option>
+            <option value="GU">Gujarati</option>
+            <option value="HE">Hebrew</option>
+            <option value="HI">Hindi</option>
+            <option value="HU">Hungarian</option>
+            <option value="IS">Icelandic</option>
+            <option value="ID">Indonesian</option>
+            <option value="GA">Irish</option>
+            <option value="IT">Italian</option>
+            <option value="JA">Japanese</option>
+            <option value="JW">Javanese</option>
+            <option value="KO">Korean</option>
+            <option value="LA">Latin</option>
+            <option value="LV">Latvian</option>
+            <option value="LT">Lithuanian</option>
+            <option value="MK">Macedonian</option>
+            <option value="MS">Malay</option>
+            <option value="ML">Malayalam</option>
+            <option value="MT">Maltese</option>
+            <option value="MI">Maori</option>
+            <option value="MR">Marathi</option>
+            <option value="MN">Mongolian</option>
+            <option value="NE">Nepali</option>
+            <option value="NO">Norwegian</option>
+            <option value="FA">Persian</option>
+            <option value="PL">Polish</option>
+            <option value="PT">Portuguese</option>
+            <option value="PA">Punjabi</option>
+            <option value="QU">Quechua</option>
+            <option value="RO">Romanian</option>
+            <option value="RU">Russian</option>
+            <option value="SM">Samoan</option>
+            <option value="SR">Serbian</option>
+            <option value="SK">Slovak</option>
+            <option value="SL">Slovenian</option>
+            <option value="ES">Spanish</option>
+            <option value="SW">Swahili</option>
+            <option value="SV">Swedish </option>
+            <option value="TA">Tamil</option>
+            <option value="TT">Tatar</option>
+            <option value="TE">Telugu</option>
+            <option value="TH">Thai</option>
+            <option value="BO">Tibetan</option>
+            <option value="TO">Tonga</option>
+            <option value="TR">Turkish</option>
+            <option value="UK">Ukrainian</option>
+            <option value="UR">Urdu</option>
+            <option value="UZ">Uzbek</option>
+            <option value="VI">Vietnamese</option>
+            <option value="CY">Welsh</option>
+            <option value="XH">Xhosa</option>
+          </select>
+        </mat-form-field>
+      </p>
+    </div>
+    <div class="advanced-search-btn">
+      <button type="button" 
+              (click)="toggleAdvancedSearch()"
+              mat-stroked-button color="primary">
+              {{displayedAdvancedSearchText}}
+      </button>
+    </div>
+    <div class="buttons">
+      <div class="search-btn">
+        <button type="submit"
+                [disabled]="bookForm.invalid" 
+                mat-raised-button color="primary">
+                SEARCH
+        </button>
+      </div>
+      <div class="clear-btn">
+        <button type="reset" 
+                (click)="resetForm()"
+                mat-raised-button color="warn">
+                CLEAR
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
+<div *ngIf="showScrollTop"
+      class="scroll-top">
+  <button type="button" 
+          (click)="scrollBackToTop()"
+          mat-button>
+          Go back to top
+  </button>
+</div>
+<div class="mat-app-background book-list"
+     *ngIf="visibleBookList">
+    <span *ngIf="totalItems">Total items: {{totalItems}}</span>
+    <app-book *ngFor="let book of books"
+              [book]="book">
+    </app-book>
+    <div *ngIf="handleNoBooks" 
+          class="error-info"> 
+      <p>
+        Ops... there is no results, please try again.
+      </p>
+      <button type="button" 
+              (click)="resetForm()" 
+              mat-stroked-button color="warn">
+              Refresh
+      </button>
+    </div> 
 </div>
