--- a/src/app/components/book/book.component.css
+++ b/src/app/components/book/book.component.css
@@ -1,48 +1,18 @@
-.book {
-  max-width: 100%;
-  height: 220px;
-  padding: 10px;
-  margin: 0 0 1rem 0;
+.book-card {
+  width: 80%;
+  margin: 1rem auto 1rem;
   display: flex;
   flex-direction: row;
-  border-bottom: #262637 solid 0.05rem;
-}
-.cover {
-  width: 30%;
-  display: flex;
-  justify-content: flex-end;
-}
-.cover img {
-  max-width:100%;
-  max-height:100%;
-  padding-right: 1rem;
 }
 .text {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
+  padding: 2rem;
+  margin: 0;
 }
-.title {
-  height: 40%;
-  display: flex;
-  align-items: center;
-  
+.text p {
+  padding: 1rem;
 }
-.title h3 {
-  font-size: 0.6rem;
-  font-weight: bold;
-  line-height: 0.6rem;
-  padding: 0.5rem 1rem;
-  display: block;
-  margin-left: 0.7rem;
-}
-.description {
-  height: 60%;
-}
-.description p {
-  padding: 0.5rem 1rem;
-  font-size: 0.5rem;
-  text-align: justify;
-  line-height: 0.5rem;
-  margin: 0.2rem 0.7rem;
+img {
+  height: calc(221px + 1rem);
+  width: calc(128px + 3rem);
+  padding: 1rem 2rem 0 1rem;
 }
