--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -1,13 +1,12 @@
-<div class="book">
-    <div class="cover">
-        <img [src]="book['cover'] !== undefined ? book['cover'] : defaultImage" alt="book cover"/>
-    </div>
+<mat-card class="book-card">
+  <div class="cover"></div>
+    <img mat-card-image [src]="book.imageLinks.thumbnail ? book.imageLinks.thumbnail : defualtImage" alt="Photo of a book cover">
     <div class="text">
-        <div class="title">
-            <h3>{{book['title']}}</h3>
-        </div>
-        <div class="description">
-            <p>{{shortDescription}}</p>
-        </div>
+      <mat-card-header>
+        <mat-card-title>{{book.title}}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{shortDescription}}</p>
+      </mat-card-content>
     </div>
-</div>
+  </mat-card>
